--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,26 @@
 /* your code */
+table {
+            width: 100%;
+            margin: 20px auto;
+            border-collapse: collapse;
+            font-family: Arial, sans-serif;
+            /* border-radius: 10px; */
+        }
+        thead {
+            background-color: #125c78;
+            color: white;
+        }
+
+        th, td {
+            border: 1px solid #ddd;
+            padding: 10px;
+            text-align: center;
+        }
+
+        th {
+            font-size: 18px;
+            font-weight: bold;
+        }
+        tbody tr:nth-child(even) {
+            background-color: #f2f2f2;
+        }
